I put table for the name etc

--- a/index.html
+++ b/index.html
@@ -19,9 +19,41 @@
             <p>Puerto Princesa City</p>
             <p class="COR_text">CERTIFICATE OF REGISTRATION</p>
         </section>
-        <section class="bottomsection">
-
-        </section>
     </header>
+    <section class="table_cor" >
+        <table>
+            <p>STUDENT GENERAL INFORMATION</p>
+            <tr>
+                <th>Student No:</th>
+                <td><strong>2022-8-0127</strong></td>
+
+                <th>College:</th>
+                <td>College of Sciences</td>
+
+                <th>School Year:</th>
+                <td>2024-2025 FIRST SEMESTER</td>
+            </tr>
+            <tr>
+                <th>Name:</th>
+                <td><strong>GUINTANGAN, ACE JEFFERSON ELLO</strong></td>
+
+                <th>PROGRAM:</th>
+                <td>Bachelor of Science in Information Technology</td>
+
+                <th>Curriculum:</th>
+                <td>08-BSIT-2019</td>
+            </tr>
+            <tr>
+                <th></th>
+                <td><strong></strong></td>
+
+                <th>Major:</th>
+                <td></td>
+
+                <th>Scholarship:</th>
+                <td></td>
+            </tr>
+        </table>
+    </section>
 </body>
 </html>
