i add the total units

--- a/index.html
+++ b/index.html
@@ -165,14 +165,26 @@
                 <tr>
                     <td>IT E3/L</td>
                     <td>IT Elective 3</td>  
-                    <td>2.0</td>
-                    <td>1.0</td>
-                    <td>3.0</td>
+                    <td style="border-bottom: 2px solid black; padding-right: 20%;" >2.0</td>
+                    <td style="border-bottom: 2px solid black; padding-right: 20%;">1.0</td>
+                    <td style="border-bottom: 2px solid black;">3.0</td>
+                    
                     <td>BSIT3B2</td>
                     <td>M 07:30 am 10:30 am/IT 101 W 09:30 am 11:30 am/CL 2</td>
                     <td style="text-decoration: underline;">Dizon, Demy R.</td>
                 </tr>
+                <tr >
+                    <td></td>
+                    <td> <strong>Total Units:</strong></td>                     
+                    <td ><strong> 15.0</strong></td>
+                    <td><strong>6.0</strong></td>
+                    <td><strong>21.0</strong></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
+            
         </div>
 
         <div class="container">
